fix: fix spacing on mobile view

--- a/css/reset.css
+++ b/css/reset.css
@@ -10,7 +10,6 @@ body {
   width: 100%;
   height: 100%;
   padding: 0px;
-  overflow-x: hidden;
 }
 
 p {
